--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -5,5 +5,15 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/menu_settings"/>
+    <item
+        android:id="@+id/menu_about"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/about"/>
+    <item
+        android:id="@+id/menu_net"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/net"/>
 
 </menu>
